--- a/concepts/metric/answer-relevancy.mdx
+++ b/concepts/metric/answer-relevancy.mdx
@@ -4,7 +4,7 @@ description: "Evaluates whether the generated answer is relevant to the user's i
 ---
 
 
-The **Answer Relevancy** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to evaluate the quality of your RAG pipeline's generator by measuring how well the `actual_output` addresses the user's original query (`input`). It helps determine whether the model is generating responses that are focused, appropriate, and directly useful in the context of the question.
+The **Answer Relevancy** metric is one of several [non-deterministic Metrics](/concepts/metric) Galtea uses to evaluate the quality of your RAG pipeline's generator by measuring how well the `actual_output` addresses the user's original query (`input`). It helps determine whether the model is generating responses that are focused, appropriate, and directly useful in the context of the question.
 
 This is essential for ensuring the model doesn't drift into unrelated topics or provide verbose but irrelevant information.
 
@@ -48,5 +48,5 @@ The Answer Relevancy metric is effective for evaluating [all types of quality te
 
 ## Related Topics
 
-- [Faithfulness](/concepts/metric-type/faithfulness)
-- [Contextual Relevancy](/concepts/metric-type/contextual-relevancy)
+- [Faithfulness](/concepts/metric/faithfulness)
+- [Contextual Relevancy](/concepts/metric/contextual-relevancy)
