--- a/concepts/metric/contextual-recall.mdx
+++ b/concepts/metric/contextual-recall.mdx
@@ -3,7 +3,7 @@ title: "Contextual Recall"
 description: "Assesses how comprehensively the retrieved context covers the information needed to produce the expected output."
 ---
 
-The **Contextual Recall** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to evaluate whether the information retrieved by your RAG pipeline sufficiently covers the knowledge needed to produce the correct or expected output. It measures completeness rather than ranking.
+The **Contextual Recall** metric is one of several [non-deterministic Metrics](/concepts/metric) Galtea uses to evaluate whether the information retrieved by your RAG pipeline sufficiently covers the knowledge needed to produce the correct or expected output. It measures completeness rather than ranking.
 
 This metric is valuable for identifying retrieval gaps—cases where important information was missing from the context entirely.
 
@@ -45,5 +45,5 @@ The Contextual Recall metric is effective for evaluating [all types of quality t
 
 ## Related Topics
 
-- [Contextual Precision](/concepts/metric-type/contextual-precision)
-- [Faithfulness](/concepts/metric-type/faithfulness)
+- [Contextual Precision](/concepts/metric/contextual-precision)
+- [Faithfulness](/concepts/metric/faithfulness)
