--- a/concepts/metric/custom-judge.mdx
+++ b/concepts/metric/custom-judge.mdx
@@ -3,7 +3,7 @@ title: "Custom Judge"
 description: "A flexible LLM-as-a-judge evaluation metric designed to assess model outputs based on customizable product rubrics, domain-specific behavior expectations, and grounded context."
 ---
 
-The Custom Judge metric is a [non-deterministic Metric Type](/concepts/metric-type) used by Galtea to offer a fully customizable evaluation experience. It allows teams to simulate human judgment using their own scoring rubrics, behavioral criteria, and contextual expectations. This flexibility makes it ideal for evaluating model outputs in scenarios where standard metrics fall short—such as enforcing product-specific capabilities, boundaries, tone, or compliance rules and enabling precise assessments aligned with your product's unique goals, use cases, and risk tolerances.
+The Custom Judge metric is a [non-deterministic Metric](/concepts/metric) used by Galtea to offer a fully customizable evaluation experience. It allows teams to simulate human judgment using their own scoring rubrics, behavioral criteria, and contextual expectations. This flexibility makes it ideal for evaluating model outputs in scenarios where standard metrics fall short—such as enforcing product-specific capabilities, boundaries, tone, or compliance rules and enabling precise assessments aligned with your product's unique goals, use cases, and risk tolerances.
 
 ---
 
@@ -79,5 +79,5 @@ The **Custom Judge** metric is best suited for:
 
 ## Related Topics
 
-- [Factual Accuracy](/concepts/metric-type/factual-accuracy)
-- [Resilience to Noise](/concepts/metric-type/resilience-to-noise)
+- [Factual Accuracy](/concepts/metric/factual-accuracy)
+- [Resilience to Noise](/concepts/metric/resilience-to-noise)
