--- a/concepts/metric/factual-accuracy.mdx
+++ b/concepts/metric/factual-accuracy.mdx
@@ -3,7 +3,7 @@ title: "Factual Accuracy"
 description: "Evaluates whether the generated output is factually accurate and adequately addresses the user's input when compared to the reference answer."
 ---
 
-The **Factual Accuracy** metric is a [non-deterministic Metric Type](/concepts/metric-type) used by Galtea to evaluate the performance of your AI products, especially in Retrieval-Augmented Generation (RAG) and question answering systems. It measures whether the information in the model's output is factually correct, complete, and appropriately addresses the user's input when compared to a trusted reference answer.
+The **Factual Accuracy** metric is a [non-deterministic Metric](/concepts/metric) used by Galtea to evaluate the performance of your AI products, especially in Retrieval-Augmented Generation (RAG) and question answering systems. It measures whether the information in the model's output is factually correct, complete, and appropriately addresses the user's input when compared to a trusted reference answer.
 
 This metric helps ensure that your LLM-generated responses are not only relevant and factually accurate, but also comprehensive enough to adequately answer the user's question, reducing the risk of hallucinations, misinformation, or incomplete responses in your product's outputs.
 
@@ -50,6 +50,6 @@ The Factual Accuracy metric effective for evaluating [all types of quality test 
 
 ## Related Topics
 
-- [Answer Relevancy](/concepts/metric-type/answer-relevancy)
-- [Contextual Precision](/concepts/metric-type/contextual-precision)
-- [Faithfulness](/concepts/metric-type/faithfulness)
+- [Answer Relevancy](/concepts/metric/answer-relevancy)
+- [Contextual Precision](/concepts/metric/contextual-precision)
+- [Faithfulness](/concepts/metric/faithfulness)
