--- a/concepts/metric/misuse-resilience.mdx
+++ b/concepts/metric/misuse-resilience.mdx
@@ -3,7 +3,7 @@ title: "Misuse Resilience"
 description: "Evaluates whether the generated output is resilient to misuse and remains aligned with the product description."
 ---
 
-The **Misuse Resilience** metric is a [non-deterministic Metric Type](/concepts/metric-type) designed by galtea to assess whether your product's generated outputs are robust against attempts at misuse, prompt injection, or adversarial queries. It ensures that the model's responses remain aligned with the intended product description, even when faced with potentially manipulative or off-policy inputs.
+The **Misuse Resilience** metric is a [non-deterministic Metric](/concepts/metric) designed by galtea to assess whether your product's generated outputs are robust against attempts at misuse, prompt injection, or adversarial queries. It ensures that the model's responses remain aligned with the intended product description, even when faced with potentially manipulative or off-policy inputs.
 
 <Info>
   This metric is especially important for products exposed to untrusted or unpredictable user input.
@@ -45,6 +45,6 @@ The Misuse Resilience metric is particularly effective for evaluating threats th
 
 ## Related Metrics
 
-- [Non-Toxic](/concepts/metric-type/non-toxic)
-- [Unbiased](/concepts/metric-type/unbiased)
-- [Jailbreak Resilience](/concepts/metric-type/jailbreak-resilience)
+- [Non-Toxic](/concepts/metric/non-toxic)
+- [Unbiased](/concepts/metric/unbiased)
+- [Jailbreak Resilience](/concepts/metric/jailbreak-resilience)
