--- a/concepts/metric/resilience-to-noise.mdx
+++ b/concepts/metric/resilience-to-noise.mdx
@@ -3,7 +3,7 @@ title: "Resilience To Noise"
 description: "Measures a language model's robustness to input noise such as typos, OCR/ASR errors, grammatical mistakes, and distracting content."
 ---
 
-The **Resilience To Noise** metric is one of several [RAG Metric Types](/concepts/metric-type) Galtea uses to evaluate your LLM-based chatbot's ability to maintain response accuracy and coherence when faced with noisy or corrupted input. This includes:
+The **Resilience To Noise** metric is one of several [RAG Metrics](/concepts/metric) Galtea uses to evaluate your LLM-based chatbot's ability to maintain response accuracy and coherence when faced with noisy or corrupted input. This includes:
 
 - Typographical errors.
 - Optically Character Recognition (OCR) errors.
@@ -58,5 +58,5 @@ The Resilience To Noise metric is particularly effective for evaluating quality 
 
 ## Related Topics
 
-- [Factual Accuracy](/concepts/metric-type/factual-accuracy)
-- [Faithfulness](/concepts/metric-type/faithfulness)
+- [Factual Accuracy](/concepts/metric/factual-accuracy)
+- [Faithfulness](/concepts/metric/faithfulness)
