--- a/concepts/metric/text-similarity.mdx
+++ b/concepts/metric/text-similarity.mdx
@@ -3,7 +3,7 @@ title: "Text Similarity"
 description: "Quantifies the overall textual resemblance between a generated summary and a reference summary by using character-level fuzzy matching. This metric accounts for minor variations in wording or structure while still capturing how similar the two texts are at a surface level."
 ---
 
-The Text Similarity metric is one of the [Classic Metric Type](/concepts/metric-type) options provided by Galtea. It evaluates how closely a generated text resembles a reference by using fuzzy string matching techniques. This approach is especially valuable in scenarios where flexible wording, paraphrasing, or non-exact phrasing is acceptable, but a general sense of alignment is still important.
+The Text Similarity metric is one of the [Classic Metrics](/concepts/metric) options provided by Galtea. It evaluates how closely a generated text resembles a reference by using fuzzy string matching techniques. This approach is especially valuable in scenarios where flexible wording, paraphrasing, or non-exact phrasing is acceptable, but a general sense of alignment is still important.
 
 ---
 ## Evaluation Parameters
@@ -38,7 +38,7 @@ Use Text Similarity when evaluating:
 ---
 ## Related Topics
 
-- [Text Match](/concepts/metric-type/text-match)
-- [IOU](/concepts/metric-type/iou)
-- [Spatial Match](/concepts/metric-type/spatial-match)
+- [Text Match](/concepts/metric/text-match)
+- [IOU](/concepts/metric/iou)
+- [Spatial Match](/concepts/metric/spatial-match)
 
