--- a/concepts/product/test.mdx
+++ b/concepts/product/test.mdx
@@ -65,7 +65,7 @@ The [Test Cases](/concepts/product/test/case) of a Test are used in [evaluations
 </Warning>
 
 <Card title="Using Tests in Evaluations" icon="badge-check" iconType="solid" href="/concepts/product/version/session/evaluation">
-  Learn how to use tests with evaluation tasks
+  Learn how to use tests with evaluations
 </Card>
 
 ## SDK Integration
