--- a/concepts/product/test/case.mdx
+++ b/concepts/product/test/case.mdx
@@ -24,7 +24,7 @@ You can **create**, view and manage your test cases on the [Galtea dashboard](ht
 Test cases are used with [evaluations](/concepts/product/version/session/evaluation). Sessions are created automatically when running evaluations.
 
 <Card title="Create an Evaluation" icon="badge-check" iconType="solid" href="/concepts/product/version/session/evaluation">
-  Learn how to use tests in evaluation tasks
+  Learn how to use tests in evaluations
 </Card>
 
 ## SDK Integration
@@ -40,7 +40,7 @@ The Galtea SDK allows you to create, view, and manage test cases programmaticall
 </ResponseField>
 
 <ResponseField name="Expected Output" type="Text">
-  The expected output for the evaluation task. This represents the ideal response you want your AI model to provide. **Example**: "The operating system of the Samsung Galaxy A8 is Android 8.1."
+  The expected output for the evaluation. This represents the ideal response you want your AI model to provide. **Example**: "The operating system of the Samsung Galaxy A8 is Android 8.1."
 </ResponseField>
 
 <ResponseField name="Context" type="Text">
