--- a/sdk/api/evaluation/list.mdx
+++ b/sdk/api/evaluation/list.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Listing Evaluation Tasks'
-description: "List all evaluation tasks associated with a specific session."
+title: 'Listing Evaluations'
+description: "List all evaluations associated with a specific session."
 ---
 
 
@@ -10,7 +10,7 @@ Returns a list of [Evaluation](/concepts/product/version/session/evaluation) obj
 ## Example
 ```python
 # List tasks for a session
-session_tasks = galtea.evaluation_tasks.list(session_id="YOUR_SESSION_ID")
+session_evaluations = galtea.evaluations.list(session_id="YOUR_SESSION_ID")
 ```
 
 ## Parameters
