--- a/sdk/api/evaluation/service.mdx
+++ b/sdk/api/evaluation/service.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'Evaluation Task Service'
-description: "Evaluation Task Service API methods in the Galtea SDK"
+title: 'Evaluation Service'
+description: "Evaluation Service API methods in the Galtea SDK"
 ---
 
 import EvaluationCard from '/snippets/cards/evaluation-card.mdx';
 
 The Evaluation Service in the Galtea SDK allows you to manage [evaluations](/concepts/product/version/session/evaluation) for assessing your products.
-This Service is exposed by the `galtea.evaluation_tasks` object.
+This Service is exposed by the `galtea.evaluations` object.
 
 <Info>
   Remember that we will be using the `galtea` object. More information [here](/sdk/api/galtea).
