--- a/sdk/api/metrics/delete.mdx
+++ b/sdk/api/metrics/delete.mdx
@@ -5,10 +5,10 @@ description: "Delete a specific metric by its ID."
 
 ## Example
 ```python
-galtea.metrics.delete(metric_type_id="YOUR_METRIC_ID")
+galtea.metrics.delete(metric_id="YOUR_METRIC_ID")
 ```
 
 ## Parameters
-<ResponseField name="metric_type_id" type="string" required>
+<ResponseField name="metric_id" type="string" required>
   The ID of the metric you want to delete.
 </ResponseField>
