--- a/sdk/api/metrics/get.mdx
+++ b/sdk/api/metrics/get.mdx
@@ -8,10 +8,10 @@ Returns a [Metric](/concepts/metric) object for the given metric ID.
 
 ## Example
 ```python
-metric = galtea.metrics.get(metric_type_id="YOUR_METRIC_ID")
+metric = galtea.metrics.get(metric_id="YOUR_METRIC_ID")
 ```
 
 ## Parameters
-<ResponseField name="metric_type_id" type="string" required>
+<ResponseField name="metric_id" type="string" required>
   The ID of the metric you want to retrieve.
 </ResponseField>
