--- a/snippets/cards/sdk-evaluation-service-card.mdx
+++ b/snippets/cards/sdk-evaluation-service-card.mdx
@@ -1,3 +1,3 @@
 <Card title="Evaluation Service SDK" icon="clipboard-check" iconType="solid" href="/sdk/api/evaluation/service">
-  Manage evaluation tasks using the Python SDK
+  Manage evaluations using the Python SDK
 </Card>
