--- a/snippets/changelog/2025-04-28.mdx
+++ b/snippets/changelog/2025-04-28.mdx
@@ -24,8 +24,8 @@ The new design not only raises the clarity and density of data presentation but 
 
 We're continuously refining the platform based on your feedback. This week's improvements include:
 
-- **Customizable Evaluation Tasks List:**  
-  You can now select which metrics you are interested in, so the evaluation tasks list only shows the ones you need.
+- **Customizable Evaluations List:**  
+  You can now select which metrics you are interested in, so the evaluations list only shows the ones you need.
 
 - **Enhanced Evaluation List Filtering:**  
   Easily filter evaluations by versions, evaluations, tests and test groups.
