--- a/snippets/changelog/2025-05-12.mdx
+++ b/snippets/changelog/2025-05-12.mdx
@@ -30,7 +30,7 @@ We've enhanced the clarity of threat selection in the Test Creation form. The se
 ## Analytics & Navigation Enhancements
 
 - **Reduced Clutter in Analytics Filters** - Tests and Versions filtering now only display elements that have been used in an evaluation
-- **Streamlined Task Navigation** - Clicking the "input" cell in the evaluation tasks table now navigates directly to the associated Test Case
+- **Streamlined Navigation** - Clicking the "input" cell in the evaluations table now navigates directly to the associated Test Case
 
 ## Bug Fixes & Improvements
 
