--- a/snippets/changelog/2025-05-26.mdx
+++ b/snippets/changelog/2025-05-26.mdx
@@ -10,9 +10,9 @@ Our test generation capabilities have been significantly upgraded:
 
 We're making it easier than ever to integrate Galtea into your development process!
 - **Simplified Evaluation Setup:** The "Create Evaluation" form on the dashboard has been replaced with a convenient code snippet. Simply copy and paste it directly into your project to get started.
-- **Streamlined Task Creation:** Similarly, a new code snippet for "Create Evaluation Task" is now available on the dashboard, simplifying how you send evaluation data to Galtea. You can easily copy and paste this into your project.
+- **Streamlined Creation:** Similarly, a new code snippet for "Create Evaluation" is now available on the dashboard, simplifying how you send evaluation data to Galtea. You can easily copy and paste this into your project.
   <Frame>
-    <img src="/images/changelog/2025-05-26_create_task_snippet.png" alt="Create Evaluation Task Code Snippet" />
+    <img src="/images/changelog/2025-05-26_create_task_snippet.png" alt="Create Evaluation Code Snippet" />
   </Frame>
 
 ## Usability Improvements
