--- a/snippets/changelog/2025-06-16.mdx
+++ b/snippets/changelog/2025-06-16.mdx
@@ -13,7 +13,7 @@ We've been hard at work reorganizing and expanding the Galtea platform to handle
   Easily organize and navigate conversations through our new Sessions feature.
 
 - **Evaluations Visualization Removed:**  
-  The dashboard now focuses on **Sessions** and **Evaluation Tasks** as the primary elements.
+  The dashboard now focuses on **Sessions** and **Evaluations** as the primary elements.
 
 - **Better Filters Across Tables:**  
   Quickly find what you need with improved filtering capabilities on the dashboard.
@@ -26,7 +26,7 @@ We've been hard at work reorganizing and expanding the Galtea platform to handle
 The new Galtea SDK v2 is here! It includes breaking changes to simplify workflows and add session support. Check out the [migration guide](/migration-to-v2) for a smooth transition.
 
 - **Implicit Session Creation:**  
-  Sessions are created automatically when needed for evaluation tasks.
+  Sessions are created automatically when needed for evaluations.
 
 - **Repurposed [evaluations.create()](/sdk/api/evaluation/create):**  
   The old method is replaced by `create_single_turn()` for test-based evaluations, while `create()` now exclusively handles [session-based](/sdk/api/session) evaluations.
