--- a/snippets/changelog/2025-09-01.mdx
+++ b/snippets/changelog/2025-09-01.mdx
@@ -23,5 +23,5 @@ We've implemented more secure and robust authentication mechanisms across the pl
 
 ## Advanced PDF Knowledge Extraction
 
-Our document processing capabilities have been significantly improved for PDF files. The enhanced extraction algorithms now provide more accurate and comprehensive knowledge retrieval from PDF documents, making it easier to create relevant [test cases](/concepts/product/test) and evaluation task scenarios from your existing documentation and knowledge bases.
+Our document processing capabilities have been significantly improved for PDF files. The enhanced extraction algorithms now provide more accurate and comprehensive knowledge retrieval from PDF documents, making it easier to create relevant [test cases](/concepts/product/test) and evaluation scenarios from your existing documentation and knowledge bases.
 </Update>
