--- a/concepts/metric/role-adherence.mdx
+++ b/concepts/metric/role-adherence.mdx
@@ -3,7 +3,7 @@ title: "Role Adherence"
 description: "Checks whether your chatbot stays within its defined role across the entire conversation."
 ---
 
-The **Role Adherence** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to evaluate whether your LLM-based chatbot maintains consistency with its assigned role throughout a conversation. This role could be defined by system prompts (e.g., “you are a travel assistant”) or contextual constraints (e.g., tone, domain, responsibilities).
+The **Role Adherence** metric is one of several [non-deterministic Metrics](/concepts/metric) Galtea uses to evaluate whether your LLM-based chatbot maintains consistency with its assigned role throughout a conversation. This role could be defined by system prompts (e.g., "you are a travel assistant") or contextual constraints (e.g., tone, domain, responsibilities).
 
 This is especially important in enterprise and safety-sensitive applications, where the chatbot must not deviate from its designated behavior or scope.
 
@@ -41,5 +41,5 @@ Scores close to **1** indicate strong consistency with the chatbot's intended pe
 
 ## Related Topics
 
-- [Knowledge Retention](/concepts/metric-type/knowledge-retention)
-- [Conversation Completeness](/concepts/metric-type/conversation-completeness)
+- [Knowledge Retention](/concepts/metric/knowledge-retention)
+- [Conversation Completeness](/concepts/metric/conversation-completeness)
