--- a/concepts/metric/text-match.mdx
+++ b/concepts/metric/text-match.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Text Match"
-description: "Determines whether the generated text matches the reference with high character-level similarity using fuzzy matching given by the [Text Similarity](/concepts/metric-type/text-similarity) metric. Returns a binary outcome based on a threshold, making it ideal for simple pass/fail evaluations where exact wording is not required."
+description: "Determines whether the generated text matches the reference with high character-level similarity using fuzzy matching given by the [Text Similarity](/concepts/metric/text-similarity) metric. Returns a binary outcome based on a threshold, making it ideal for simple pass/fail evaluations where exact wording is not required."
 ---
 
-The Text Match metric is part of the [Classic Metric Type](/concepts/metric-type) options in Galtea. It leverages character-level fuzzy string comparison to assess whether two texts are similar enough, based on a predefined threshold. Rather than producing a continuous similarity score, this metric returns a boolean-style score, which is useful for scenarios where a definitive match decision is needed despite minor wording differences.
+The Text Match metric is part of the [Classic Metrics](/concepts/metric) options in Galtea. It leverages character-level fuzzy string comparison to assess whether two texts are similar enough, based on a predefined threshold. Rather than producing a continuous similarity score, this metric returns a boolean-style score, which is useful for scenarios where a definitive match decision is needed despite minor wording differences.
 
 ---
 
@@ -43,8 +43,8 @@ Use Text Match when evaluating:
 ---
 ## Related Topics
 
-* [Text Similarity](/concepts/metric-type/text-similarity)
-* [IOU](/concepts/metric-type/iou)
-* [Spatial Match](/concepts/metric-type/spatial-match)
+* [Text Similarity](/concepts/metric/text-similarity)
+* [IOU](/concepts/metric/iou)
+* [Spatial Match](/concepts/metric/spatial-match)
 
 
