--- a/concepts/product/version.mdx
+++ b/concepts/product/version.mdx
@@ -23,7 +23,7 @@ One of the key benefits of tracking versions in Galtea is the ability to compare
 - Make data-driven decisions about which version to deploy
 
 <Card title="Run Evaluations" icon="clipboard-check" iconType="solid" href="/concepts/product/version/session/evaluation">
-  Learn how to run evaluation tasks for your versions
+  Learn how to run evaluations for your versions
 </Card>
 
 ## SDK Integration
