--- a/sdk/api/evaluation/create-single-turn.mdx
+++ b/sdk/api/evaluation/create-single-turn.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Create Single-Turn Evaluation Task'
-description: "Create an evaluation task for a single-turn interaction, either from a test case or production data."
+title: 'Create Single-Turn Evaluation'
+description: "Create an evaluation for a single-turn interaction, either from a test case or production data."
 ---
 
 ## Returns
@@ -34,8 +34,8 @@ custom_score_accuracy = MyAccuracy()
 # If the metric does not exist yet in the platform, you can create it like this:
 galtea.metrics.create(name=custom_score_accuracy.name, description='checks for the presence of the keyword "paris" in the output')
 
-# Create evaluation tasks using a mix of standard and custom metrics
-evaluation_tasks = galtea.evaluation_tasks.create_single_turn(
+# Create evaluations using a mix of standard and custom metrics
+evaluations = galtea.evaluations.create_single_turn(
     version_id="YOUR_VERSION_ID",
     test_case_id="YOUR_TEST_CASE_ID",
     actual_output="The capital of France is Paris.",
@@ -48,7 +48,7 @@ evaluation_tasks = galtea.evaluation_tasks.create_single_turn(
 
 ### Example: Production Monitoring
 ```python
-evaluation_tasks = galtea.evaluation_tasks.create_single_turn(
+evaluations = galtea.evaluations.create_single_turn(
     version_id="YOUR_VERSION_ID",
     is_production=True,
     input="A real user's query from production",
