--- a/sdk/integrations/github-actions.mdx
+++ b/sdk/integrations/github-actions.mdx
@@ -106,7 +106,7 @@ metrics = [
 model_answer = "This is a placeholder model answer."
 
 for test_case in test_cases:
-    galtea.evaluation_tasks.create_single_turn(
+    galtea.evaluations.create_single_turn(
       version_id=version.id,
       test_case_id=test_case.id,
       metrics=metrics,
