--- a/snippets/cards/sdk-metrics-service-card.mdx
+++ b/snippets/cards/sdk-metrics-service-card.mdx
@@ -1,3 +1,3 @@
 <Card title="Metrics Service SDK" icon="function" iconType="solid" href="/sdk/api/metrics/service">
-  Manage metric types using the Python SDK
+  Manage metrics using the Python SDK
 </Card>
