--- a/snippets/changelog/2025-06-23.mdx
+++ b/snippets/changelog/2025-06-23.mdx
@@ -3,7 +3,7 @@
 
 You can now create Quality Tests directly from your own examples using the new **Few Shots** parameter. This makes it easier to tailor tests to your specific use cases and ensure your models are evaluated on the scenarios that matter most. [Learn more about test creation](/sdk/api/test/create).
 
-## Metric Type Tags
+## Metric Tags
 
 [Metrics](/concepts/metric) now support **tags** for easier classification and discovery. Quickly find and organize metrics relevant to your projects. [See all metrics](/concepts/metric).
 
